# stm32767

./: .gitignore  Cargo.toml  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
eth/: Cargo.toml
eth/src/: desc.rs  lib.rs  phy.rs  smi.rs
src/: lib.rs  main.rs
