[package]
name = "tcp"
version = "0.1.0"
authors = ["wbuck <wbuckley15@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6"
panic-halt = "0.2"
panic-semihosting = "0.5"

[dependencies.stm32f7]
version = "0.13"
features = ["stm32f7x7", "rt"]

#[dependencies.stm32f7xx-hal]
#features = [ "stm32f767", "rt" ]
#version = "0.2"

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations